namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: databases
  labels:
    name: databases
