mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas:  1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:latest
          ports:
            - containerPort: 8081
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
      nodePort: 31308
