mysql-adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-adminer
  labels:
    app: mysql-adminer
spec:
  replicas:  1
  selector:
    matchLabels:
      app: mysql-adminer
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      labels:
        app: mysql-adminer
    spec:
      containers:
        - name: mysql-adminer
          image: adminer:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-adminer-service
spec:
  selector:
    app: mysql-adminer
  type: LoadBalancer
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 8080
      nodePort: 31309
