mysql-workbench.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-workbench
  labels:
    app: mysql-workbench
spec:
  replicas:  1
  selector:
    matchLabels:
      app: mysql-workbench
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      labels:
        app: mysql-workbench
    spec:
      containers:
        - name: mysql-workbench
          image: linuxserver/mysql-workbench:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-workbench-service
spec:
  selector:
    app: mysql-workbench
  type: LoadBalancer
  ports:
    - port: 8085
      protocol: TCP
      targetPort: 3000
      nodePort: 31312
