postgres-pgadmin4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-pgadmin4
  labels:
    app: postgres-pgadmin4
spec:
  replicas:  1
  selector:
    matchLabels:
      app: postgres-pgadmin4
  template:
    metadata:
      annotations:
        metrics.dynatrace.com/path: /stats/prometheus
        metrics.dynatrace.com/port: "15020"
        metrics.dynatrace.com/scrape: "true"
        metrics.dynatrace.com/secure: "false"
      labels:
        app: postgres-pgadmin4
    spec:
      containers:
        - name: postgres-pgadmin4
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-pgadmin4-service
spec:
  selector:
    app: postgres-pgadmin4
  type: LoadBalancer
  ports:
    - port: 8084
      protocol: TCP
      targetPort: 80
      nodePort: 31311
