ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: databases-ingress
  namespace: databases
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/listen-ports: "[5432,3306,27017]"
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /postgres
            pathType: Prefix
            backend:
              service:
                name: postgres-service
                port:
                  number: 5432
          - path: /mysql
            pathType: Prefix
            backend:
              service:
                name: mysql-service
                port:
                  number: 3306
          - path: /mongo
            pathType: Prefix
            backend:
              service:
                name: mongo-service
                port:
                  number: 27017
